# src/shared/infra/http/routes/categories.routes.ts
@@ -1,9 +1,11 @@
 import { Router } from 'express';
 
 import { CreateEatCategoriesController } from '@modules/categories/useCases/createEatCategories/CreateEatCategoriesController';
+import { ListAllEatCategoriesController } from '@modules/categories/useCases/listAllEatCategories/ListAllEatCategoriesController';
 
 import { ensureAuthenticated } from '../middlewares/ensureAuthenticated';
 
+const listAllEatCategoriesController = new ListAllEatCategoriesController();
 const createEatCategoriesController = new CreateEatCategoriesController();
 const categoriesRoutes = Router();
 
@@ -12,5 +14,7 @@ categoriesRoutes.post(
   ensureAuthenticated,
   createEatCategoriesController.handle
 );
+
+categoriesRoutes.get('/eat', listAllEatCategoriesController.handle);
 
 export { categoriesRoutes };
